--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,8 @@
     <body>
         <div id ="container">
             <div id = "cabecera">
-                Cabecera
+                Limite del Sistema Solar
+                <span id = "tagline"><br>En donde realmente termia nuestro Sistema Solar?</span>
             </div>
             <div id = "post">
                 <h1>Este es el titulo atractivo e interesante del Post</h1>
