Agregado el contenido adicional del blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,15 @@
         <div id ="container">
             <div id = "post">
                 <h1>Este es el titulo atractivo e interesante del Post</h1>
-                <p>Y este es el parrafo de inicio, donde vamos a explicar las cosas increibles que se pueden hcaer con ramas</p>
+                <p>A diferencia de un pais que tiene sus limites territoriales 
+                    bien definidos, existen objetos cuyos bordes pueden ser 
+                    bastante difusos y sin un límite claro, tal es el caso 
+                    de nuestro Sistema Solar, que además, a medida que entendemos 
+                    mejor al universo, este límite se ha ido alejando cada vez más.</p>
+                <p>
+                    En un principio y durante mucho tiempo se le consideró a Plutón
+                    como el límite, a una distancia de 30UA.
+                </p>
             </div>
         </div>
     </body>
