--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
     <body>
         <div id ="container">
             <div id = "cabecera">
-                Limite del Sistema Solar
+                Limite del Universo
                 <span id = "tagline"><br>En donde realmente termia nuestro Sistema Solar?</span>
             </div>
             <div id = "post">
