Se agregó leyenda final, se cambió la cabecera y el color del texto a azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
     <body>
         <div id ="container">
             <div id = "cabecera">
-                Limite del Sistema Solar
+                El limite del Sistema Solar
                 <span id = "tagline"><br>En donde realmente termia nuestro Sistema Solar?</span>
             </div>
             <div id = "post">
@@ -20,6 +20,9 @@
                 <p>
                     En un principio y durante mucho tiempo se le consideró a Plutón
                     como el límite, a una distancia de 30UA.
+                </p>
+                <p>
+                    Que la fuerza te acompañe
                 </p>
             </div>
         </div>
