Nueva versión del titulo

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Space Time</title>
+        <title>Solar System Time</title>
         <meta charset="utf-8">
         <link rel = "stylesheet" href = "css/estilos.css" />
     </head>
