cambio del subtitulo e imagen al container

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,9 +8,10 @@
         <div id ="container">
             <div id = "cabecera">
                 El limite del Sistema Solar
-                <span id = "tagline"><br>En donde realmente termia nuestro Sistema Solar?</span>
+                <span id = "tagline"><br>¿Sabes en donde realmente termia nuestro Sistema Solar?</span>
             </div>
             <div id = "post">
+                <img id="logo" src="imagenes/solarSystem.png" /><br />
                 <h1>Este es el titulo atractivo e interesante del Post</h1>
                 <p>A diferencia de un pais que tiene sus limites territoriales 
                     bien definidos, existen objetos cuyos bordes pueden ser 
