Cambio de titulo real del contenido

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
             </div>
             <div id = "post">
                 <img id="logo" src="imagenes/solarSystem.png" /><br />
-                <h1>Este es el titulo atractivo e interesante del Post</h1>
+                <h1>El limite no siempre ha sido el mismo</h1>
                 <p>A diferencia de un pais que tiene sus limites territoriales 
                     bien definidos, existen objetos cuyos bordes pueden ser 
                     bastante difusos y sin un límite claro, tal es el caso 
