Acentos y enlace de Unidad Astronomica en el Body

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,20 +7,22 @@
     <body>
         <div id ="container">
             <div id = "cabecera">
-                El limite del Sistema Solar
+                El l&iacute;mite del Sistema Solar
                 <span id = "tagline"><br>¿Sabes en donde realmente termia nuestro Sistema Solar?</span>
             </div>
             <div id = "post">
                 <img id="logo" src="imagenes/solarSystem.png" /><br />
-                <h1>El limite no siempre ha sido el mismo</h1>
-                <p>A diferencia de un pais que tiene sus limites territoriales 
-                    bien definidos, existen objetos cuyos bordes pueden ser 
-                    bastante difusos y sin un límite claro, tal es el caso 
-                    de nuestro Sistema Solar, que además, a medida que entendemos 
-                    mejor al universo, este límite se ha ido alejando cada vez más.</p>
+                <h1>El l&iacute;mite no siempre ha sido el mismo</h1>
+                <p>A diferencia de un pa&iacute;s que tiene sus l&iacute;mites territoriales 
+                    bien definidos, existen "objetos" cuyos bordes pueden ser 
+                    bastante difusos y sin un l&iacute;mite claro, tal es el caso 
+                    de nuestro Sistema Solar, que adem&aacute;s, a medida que entendemos 
+                    mejor al universo, este l&iacute;mite se ha ido alejando cada vez m&aacute;s.</p>
                 <p>
-                    En un principio y durante mucho tiempo se le consideró a Plutón
-                    como el límite, a una distancia de 30UA.
+                    En un principio y durante mucho tiempo se le consider&oacute; a Plutón como el borde, dicho astro se encuentra a una distancia de 30UA.
+                </p>
+                <p>
+                    Pero antes debemos entender ¿Que es una <a href="https://es.wikipedia.org/wiki/Unidad_astron%C3%B3mica"></ahref>Unidad Astronomica</a> o UA?
                 </p>
                 <p>
                     Que la fuerza te acompañe
