Imagen dentro de un parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
                 <span id = "tagline"><br>¿Sabes en donde realmente termia nuestro Sistema Solar?</span>
             </div>
             <div id = "post">
-                <img id="logo" src="imagenes/solarSystem.png" /><br />
+                <p><img id="logo" src="imagenes/solarSystem.png" /></p>
                 <h1>El l&iacute;mite no siempre ha sido el mismo</h1>
                 <p>A diferencia de un pa&iacute;s que tiene sus l&iacute;mites territoriales 
                     bien definidos, existen "objetos" cuyos bordes pueden ser 
