corrigiendo el margen de imagen UA

--- a/blogpost.html
+++ b/blogpost.html
@@ -21,7 +21,7 @@
                 <p>
                     En un principio y durante mucho tiempo se le consider&oacute; a Plutón como el borde, dicho astro se encuentra a una distancia de 30UA. Pero antes debemos entender ¿Que es una <a href="https://es.wikipedia.org/wiki/Unidad_astron%C3%B3mica"></ahref>Unidad Astronomica</a> o UA?
                 </p>
-                <p><img id="ua" src="imagenes/ua.jpg" width="40%" /></p>
+                <p><img id="ua" src="imagenes/ua.jpg" /></p>
             </div>
             <div id="footer">
                 Que la fuerza te acompañe 
